src/app.module.css
.loss {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: red;
    opacity: 0.5;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 8rem;
    font-weight: bold;
    color: #fff;
    transition: all 2s ease;
}

.win {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: green;
    opacity: 0.5;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 5rem;
    font-weight: bold;
    color: #fff;
    transition: all 2s ease;
}

.outcomeStyle {
    font-size: 2rem;
    text-align: center;
    color: #000;
}

.returnStyle {
    max-width: 600px;
    display: flex;
    flex-direction: column;
    gap: 3rem;
    margin: 0 auto; 
    align-items: center;
}

.resultText {
    font-size: 6rem;
    width: 100%;
    text-align: center;
    color: white;
    position: absolute;
    left: 0%;
    font-weight: bold;
    transition: all 2s ease;

}

